SLiMS/slims-web-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: slims-web-middleware
  namespace: slims-web
spec:
  stripPrefix:
    prefixes:
      - /slims-web
