SLiMS/slims-web-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: slims-web
  namespace: slims-web
spec: {}
status: {}
