SLiMS/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose-linux-amd64 convert -f docker-compose.yml -n slims-web
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
  namespace: slims-web
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: database
  type: ClusterIP
status:
  loadBalancer: {}
