SLiMS/slims-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose-linux-amd64 convert -f docker-compose.yml -n slims-web
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: slims-web
  name: slims-web
  namespace: slims-web
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    io.kompose.service: slims-web
  type: ClusterIP
status:
  loadBalancer: {}
